changes to deploy to bean stalk

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,16 @@ before_install:
 
 script:
   - docker run -e CI=true sveluvil/docker-react npm run test
+
+deploy :
+  edge: true
+  provider: elasticbeanstalk
+  region: "us-east-1"
+  app: "docker-react"
+  evn: "DockerReact-env"
+  bucket_name: "elasticbeanstalk-us-east-1-731068111425"
+  bucket_path: "docker-react"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
